* Tue Oct 16 2018 Nick Markowski <nicholas.markowski@onyxpoint.com> - 8.1.0-0
- Removed unnecessary dependencies from metadata.json.  Now, when users install
  auditd stand-alone i.e. `puppet module install`, they will not have
  extraneous modules clutter their environment.
  - herculesteam/augeasproviders_grub
  - simp/rsyslog

* Fri Oct 12 2018 Nick Miller <nick.miller@onyxpoint.com> - 8.1.0-0
- Changed the $package_ensure parameter from 'latest' to 'installed'
- It will also respect `simp_options::package_ensure`

* Fri Sep 07 2018 Liz Nemsick <lnemsick.simp@gmail.com> - 8.1.0-0
- Update Hiera 4 to Hiera 5

* Fri Jul 27 2018 Brandon Ess <brandon.ess@gmail.com> - 8.1.0-0
- Align group ownership of the auditd log directories with the setting for
  auditd itself so that the designated group can access the log files.

* Fri Jul 13 2018 Trevor Vaughan <tvaughan@onyxpoint.com> - 8.1.0-0
- Updated to work with Puppet 5 and OEL

* Fri Jul 06 2018 Trey Dockendorf <tdockendorf@osc.edu> - 8.0.1-0
- Allow lowercase values for several parameters in accordance with the man
  pages and SCAP expectations.

* Thu Jun 21 2018 Liz Nemsick <lnemsick.simp@gmail.com> - 8.0.0-0
- Added ability to select one or more audit profiles.  When multiple
  profiles are selected, their rules are effectively concatenated in
  the order in which the profiles are listed in
  auditd::default_audit_profiles.
- The following API Changes were made in support of multiple audit
  profiles:
  - $::auditd::$default_audit_profile has been deprecated by
    $::auditd::$default_audit_profiles
  - auditd::config and auditd::config::audit_profiles::simp classes are
    now private.  In the unlikely event that you included just these
    classes in your manifest, you must now include auditd instead.
  - The following auditctl global configuration options that were in
    auditd::config::audit_profiles::simp are now in the auditd class,
    instead: $ignore_errors, $ignore_anonymous, $ignore_system_services,